distortion resolved

--- a/index.css
+++ b/index.css
@@ -274,9 +274,11 @@ body {
   /* margin-top: 100px; */
   /* border: 1px solid red; */
   /* padding-top: 100px; */
-  height: 300px;
+  height: auto;
+  padding-bottom: 100px;
   /* display: flex; */
 }
+
 #techStacks {
 
   /* border: 1px solid gold; */
